<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white"
    android:orientation="vertical">

    <include
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/token_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/hint_color"
        android:theme="@style/MyEditTextTheme"
        android:visibility="gone">

        <org.custom_font_library.CustomEditText
            style="@style/Linotte_Light"
            android:id="@+id/edt_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_enter_token_hint"
            android:textColorHint="@color/hint_color"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/hint_color"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/currentpwd_type_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/hint_color"
        android:theme="@style/MyEditTextTheme"
        android:visibility="visible">

        <org.custom_font_library.CustomEditText
            style="@style/Linotte_Light"
            android:id="@+id/edt_current_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_current_pwd_hint"
            android:textColorHint="@color/hint_color"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/hint_color"/>
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/view_current_pwd"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/hint_color"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_pwd_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint_color"
        android:theme="@style/MyEditTextTheme">

        <org.custom_font_library.CustomEditText
            style="@style/Linotte_Light"
            android:id="@+id/edt_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_new_pwd_hint"
            android:textColorHint="@color/hint_color"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/hint_color"/>
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/view_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/hint_color"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmpwd_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint_color"
        android:theme="@style/MyEditTextTheme">

        <org.custom_font_library.CustomEditText
            style="@style/Linotte_Light"
            android:id="@+id/edt_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_changepwdconfirm_pwd_hint"
            android:textColorHint="@color/hint_color"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/hint_color"/>
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/view_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/hint_color"/>

    <org.custom_font_library.CustomTextView
        style="@style/Linotte_Light"
        android:id="@+id/tv_submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:padding="12dp"
        android:background="@drawable/rounded_corners_background"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/pure_white"
        android:text="@string/submit_btn" />
</LinearLayout>
