<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_bg">

    <include
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_layout" />

    <ImageView
        android:id="@+id/iv_forgot_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:layout_above="@+id/tv_forgot_message"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:src="@drawable/forgot_image"/>

    <org.custom_font_library.CustomTextView
        android:id="@+id/tv_forgot_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/forgot_email_text_input_layout"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/txt_msg"
        android:textColor="@color/hint_color"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint_color"
        android:layout_centerInParent="true"
        android:theme="@style/MyEditTextTheme">

        <org.custom_font_library.CustomEditText
            style="@style/Linotte_Light"
            android:id="@+id/edt_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/edit_email_forgot_hint"
            android:textSize="16sp"
            android:textColorHint="@color/hint_color"
            android:drawableLeft="@drawable/email_icon"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="12dp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/forgot_email_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/forgot_email_text_input_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/hint_color"/>

    <org.custom_font_library.CustomTextView
        style="@style/Linotte_Light"
        android:id="@+id/tv_forgot_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/forgot_email_view_line"
        android:padding="12dp"
        android:gravity="center"
        android:background="@drawable/rounded_corners_background"
        android:textSize="16sp"
        android:textColor="@color/pure_white"
        android:text="@string/submit_btn"
        android:filterTouchesWhenObscured="true" />
</RelativeLayout>
